add noMicrophone event handle

--- a/examples/example-1.html
+++ b/examples/example-1.html
@@ -31,6 +31,9 @@
         swfSrc: "../recorder.swf",
         onPrivacyChange: function (allowed) {
           console.log(allowed);
+        },
+        noMicrophone: function(){
+            console.log('No microphone');
         }
       });
 
